JSAI/error/src/test/resources/base/v031.js
try {
	var x = [];
	x.length = 45.67676;
} catch (y) {
	print(x.length);	
}

x.length = 45;
print(x.length);